--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,10 +14,8 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     outputs:
-      hello-react--tag_name: ${{ steps.release.outputs.hello-react--tag_name}}
-      hello-react--release_created: ${{ steps.release.outputs.hello-react--release_created}}
-      hello-rust--tag_name: ${{ steps.release.outputs.hello-rust--tag_name}}
-      hello-rust--release_created: ${{ steps.release.outputs.hello-rust--release_created}}
+      web--tag_name: ${{ steps.release.outputs.web--tag_name}}
+      web--release_created: ${{ steps.release.outputs.web--release_created}}
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
@@ -31,9 +29,8 @@ jobs:
           echo "Release outputs:"
           echo "${{ toJson(steps.release.outputs) }}"
 
-
-  release-hello-react:
-    if: ${{needs.release-please.outputs.hello-react--release_created}}
+  release-web:
+    if: ${{needs.release-please.outputs.web--release_created}}
     runs-on: ubuntu-latest
     needs: release-please
     steps:
@@ -41,35 +38,13 @@ jobs:
       - uses: ./.github/actions/setup-node-env
         with:
           node-version: 18
-          cache-path: hello-react/node_modules
-          cache-key: "${{hashFiles('hello-react/package-lock.json')}}"
-          project: hello-react
-      - run: npm test --prefix hello-react -- a --watchAll=false
-      - run: npm run build --prefix hello-react
-      - run: zip -r hello-react-build.zip hello-react/build
+          cache-path: web/node_modules
+          cache-key: "${{hashFiles('web/package-lock.json')}}"
+          project: web
+      - run: npm test --prefix web -- a --watchAll=false
+      - run: npm run build --prefix web
+      - run: zip -r web-build.zip web/build
       - name: Upload Release Artifact
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ needs.release-please.outputs.hello-react--tag_name }} hello-react-build.zip
-
-  release-hello-rust:
-    if: ${{needs.release-please.outputs.hello-rust--release_created}}
-    runs-on: ubuntu-latest
-    needs: release-please
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Test
-        uses: clechasseur/rs-cargo@v2
-        with:
-          command: test
-          args: --verbose --manifest-path hello-rust/Cargo.toml
-      - name: Build
-        uses: clechasseur/rs-cargo@v2
-        with:
-          command: build
-          args: --verbose --release --manifest-path hello-rust/Cargo.toml --target x86_64-unknown-linux-gnu
-      - name: Upload Release Artifact
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ needs.release-please.outputs.hello-rust--tag_name }} hello-rust/target/x86_64-unknown-linux-gnu/release/hello_rust
+        run: gh release upload ${{ needs.release-please.outputs.web--tag_name }} web-build.zip
