--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,16 +1,9 @@
 {
-  "include-component-in-tag": true,
   "include-v-in-tag": true,
-  "tag-separator": "@",
-  "separate-pull-requests": true,
   "packages": {
-    "hello-react": {
-      "path": "hello-react",
+    "web": {
+      "path": "web",
       "release-type": "node"
-    },
-    "hello-rust": {
-      "path": "hello-rust",
-      "release-type": "rust"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
