--- a/.github/workflows/release-please-manual.yml
+++ b/.github/workflows/release-please-manual.yml
@@ -13,7 +13,7 @@ jobs:
   debug:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate Custom Reports
+      - name: Debug
         shell: bash
         run: |
           env
