--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -10,15 +10,12 @@ on:
 
 jobs:
 
-  checkout:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
   build:
     runs-on: ubuntu-latest
-    needs: checkout
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - name: Build
         shell: bash
         run: |
@@ -28,6 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Deploy to Development
         shell: bash
         run: |
@@ -37,6 +37,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - name: Test
         shell: bash
         run: |
