ci: add deployment and testing stages to release workflow and update path triggers

--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'web/**'
-      - '.github/workflows/web.yml'
-      - '!web/CHANGELOG.md'
+    paths-ignore:
+      - 'web/CHANGELOG.md'
+      - '.github/**'
+      - './*'
 
 jobs:
 
