--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -33,7 +33,7 @@ jobs:
           echo "Release outputs:"
           echo '${{ toJson(steps.release.outputs) }}'
 
-  release-web:
+  build:
     if: ${{needs.release-please.outputs.web--release_created}}
     runs-on: ubuntu-latest
     needs: release-please
@@ -47,8 +47,37 @@ jobs:
           project: web
       - run: npm test --prefix web -- a --watchAll=false
       - run: npm run build --prefix web
-      - run: zip -r web-build.zip web/build
+      - run: zip -r ${{ needs.release-please.outputs.web--tag_name }}.zip web/build
       - name: Upload Release Artifact
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ needs.release-please.outputs.web--tag_name }} web-build.zip
+        run: gh release upload ${{ needs.release-please.outputs.web--tag_name }} ${{ needs.release-please.outputs.web--tag_name }}.zip
+
+  deploy:
+    if: ${{needs.release-please.outputs.web--release_created}}
+    runs-on: ubuntu-latest
+    needs: 
+      - build
+      - release-please
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Deploy to uat
+        shell: bash
+        run: |
+          echo "Deploy to uat"
+      
+  test:
+    if: ${{needs.release-please.outputs.web--release_created}}
+    runs-on: ubuntu-latest
+    needs: 
+      - deploy
+      - release-please
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Test
+        shell: bash
+        run: |
+          echo "Test"
