ci: skip deployment workflows for release commits and add descriptive job names

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -55,6 +55,7 @@ jobs:
 
   deploy:
     if: ${{needs.release-please.outputs.web--release_created}}
+    name: 'Deploy uat'
     runs-on: ubuntu-latest
     needs: 
       - build
