--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -4,14 +4,39 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'web/CHANGELOG.md'
-      - '.github/**'
-      - './*'
+    paths:
+      - 'web/**'
+      - '.github/workflows/deploy-development.yml'
 
 jobs:
+  # Check if this is a release commit
+  check_commit:
+    runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.check_commit.outputs.should_run }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+      
+      - name: Check commit message
+        id: check_commit
+        run: |
+          COMMIT_MSG="$(git log -1 --pretty=format:'%s')"
+          echo "Commit message: $COMMIT_MSG"
+          
+          if [[ "$COMMIT_MSG" == *"chore(main): release web"* ]]; then
+            echo "This is a release commit, skipping workflow"
+            echo "should_run=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "Not a release commit, running workflow"
+            echo "should_run=true" >> "$GITHUB_OUTPUT"
+          fi
 
   build:
+    needs: check_commit
+    if: ${{ needs.check_commit.outputs.should_run == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -23,8 +48,10 @@ jobs:
           echo "Build"
 
   deploy:
+    name: 'Deploy Development'
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, check_commit]
+    if: ${{ needs.check_commit.outputs.should_run == 'true' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -36,7 +63,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: [deploy, check_commit]
+    if: ${{ needs.check_commit.outputs.should_run == 'true' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
