--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -61,6 +61,9 @@ jobs:
       - build
       - release-please
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - name: Trigger deploy-uat workflow
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
