--- a/.github/workflows/deploy-uat.yml
+++ b/.github/workflows/deploy-uat.yml
@@ -1,14 +1,15 @@
 name: Deploy to UAT
 
 on:
+  push:
+    tags:
+      - web-v*
   workflow_dispatch:
 
 jobs:
 
   validate:
     runs-on: ubuntu-latest
-    outputs:
-      deploy_tag: ${{ steps.validate.outputs.deploy_tag }}
     steps:
       - name: Validate tag format
         id: validate
@@ -23,8 +24,6 @@ jobs:
           fi
           
           echo "Tag validation successful"
-          # Set the tag as an output for this job
-          echo "deploy_tag=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
 
   debug:
     runs-on: ubuntu-latest
@@ -45,4 +44,16 @@ jobs:
       - name: Deploy to UAT
         shell: bash
         run: |
-          echo "deployment of tag ${{ needs.validate.outputs.deploy_tag }} to uat"
+          echo "deployment of tag ${{ github.ref_name }} to uat"
+
+  playwright-test:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: playwright-test
+        shell: bash
+        run: |
+          echo "playwright-test"
