--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -52,3 +52,28 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh release upload ${{ needs.release-please.outputs.web--tag_name }} ${{ needs.release-please.outputs.web--tag_name }}.zip
+
+  deploy:
+    name: 'Deploy UAT'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Deploy to UAT
+        shell: bash
+        run: |
+          echo "deployment of tag ${{ github.ref_name }} to uat"
+      
+  playwright-test:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: playwright-test
+        shell: bash
+        run: |
+          echo "playwright-test"
