--- a/.github/workflows/release-please-patch.yml
+++ b/.github/workflows/release-please-patch.yml
@@ -44,7 +44,7 @@ jobs:
           echo "${{ toJson(steps.release.outputs) }}"
 
 
-  release-web:
+  build:
     if: ${{needs.release-please.outputs.web--release_created}}
     runs-on: ubuntu-latest
     needs: release-please
@@ -58,8 +58,33 @@ jobs:
           project: web
       - run: npm test --prefix web -- a --watchAll=false
       - run: npm run build --prefix web
-      - run: zip -r web-build.zip web/build
+      - run: zip -r ${{ needs.release-please.outputs.web--tag_name }}.zip web/build
       - name: Upload Release Artifact
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ needs.release-please.outputs.web--tag_name }} web-build.zip
+        run: gh release upload ${{ needs.release-please.outputs.web--tag_name }} ${{ needs.release-please.outputs.web--tag_name }}.zip
+
+  deploy:
+    name: 'Deploy UAT'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy to UAT
+        shell: bash
+        run: |
+          echo "deployment of tag ${{ github.ref_name }} to uat"
+              
+  playwright-test:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: playwright-test
+        shell: bash
+        run: |
+          echo "playwright-test"
