--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -27,6 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: "${{ !contains(github.event.head_commit.message, 'chore(main): release web') }}"
+    environment:
+      name: development
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
