--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -38,6 +38,8 @@ jobs:
     name: 'Deploy Production'
     runs-on: ubuntu-latest
     needs: [validate]
+    environment:
+      name: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
