--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -38,6 +38,8 @@ jobs:
     name: 'Deploy Staging'
     runs-on: ubuntu-latest
     needs: [validate]
+    environment:
+      name: staging
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -46,3 +48,15 @@ jobs:
         shell: bash
         run: |
           echo "deployment of tag ${{ needs.validate.outputs.deploy_tag }} to staging"
+
+  playwright-test:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: playwright-test
+        shell: bash
+        run: |
+          echo "playwright-test"
