--- a/.github/workflows/deploy-uat.yml
+++ b/.github/workflows/deploy-uat.yml
@@ -34,6 +34,8 @@ jobs:
     name: 'Deploy UAT'
     runs-on: ubuntu-latest
     needs: [validate]
+    environment:
+      name: uat
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
