--- a/.github/workflows/release-please-patch.yml
+++ b/.github/workflows/release-please-patch.yml
@@ -68,6 +68,8 @@ jobs:
     name: 'Deploy UAT'
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: uat
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
