--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -57,6 +57,8 @@ jobs:
     name: 'Deploy UAT'
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: uat
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
