--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,6 +11,7 @@ jobs:
   lint:
     name: 'lint'
     runs-on: 'ubuntu-latest'
+    if: github.event.pull_request.user.login != 'github-actions[bot]'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
